--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,11 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
-  background-color: #282c34;
+  background-image: url('https://www.riaa.com/wp-content/uploads/2016/02/482216347x.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.8;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
