--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,7 @@
 }
 
 .App-header {
-  background-image: url('https://www.riaa.com/wp-content/uploads/2016/02/482216347x.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.8;
+  background: linear-gradient(to left bottom, white, #498172 70%);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
